real-time reader status

--- a/app/card_not_found.html
+++ b/app/card_not_found.html
@@ -16,6 +16,9 @@
       </div>
       <div class="header_icons">
         <div id='ct'></div>
+        <div>Reader status:
+          <span id="reader_status"></span>
+        </div>
         <button id="main_menu">&larr;</button>
       </div>
     </header>
