--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,11 @@
       <div class="header_text">
         <h1>Temporary</h1>
       </div>
-      <div class="header_icons">
+      <div class="header_icons"> 
         <div id='ct'></div>
+        <div>Reader status:
+          <span id="reader_status"></span>
+        </div>
       </div>
     </header>
     <section class="flash" id="flash"></section>
