--- a/app/offline.html
+++ b/app/offline.html
@@ -12,6 +12,9 @@
       <div class="logo"><img src="img/temporary_logo.png"></div>
       <div class="header_text">
         <h1>Temporary</h1>
+        <div>Reader status:
+          <span id="reader_status"></span>
+        </div>
       </div>
     </header>
     <section class="flash" id="flash"></section>
