--- a/app/link_new_card.html
+++ b/app/link_new_card.html
@@ -6,7 +6,7 @@
       
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
-
+      <script src="js/shared.js"></script>
   </head>
   <body>
     <header>
@@ -16,6 +16,9 @@
       </div>
       <div class="header_icons">
         <div id='ct'></div>
+        <div>Reader status:
+          <span id="reader_status"></span>
+        </div>
         <button id="main_menu">&larr;</button>
       </div>
     </header>
@@ -30,7 +33,7 @@
 
      
     </section>
-     <script src="js/shared.js"></script>
+   
      <script src="js/link_card.js"></script>
   </body>
   
