--- a/app/user.html
+++ b/app/user.html
@@ -15,6 +15,9 @@
       </div>
       <div class="header_icons">
         <div id='ct'></div>
+        <div>Reader status:
+          <span id="reader_status"></span>
+        </div>
         <button id="main_menu">&larr;</button>
       </div>
     </header>
