checking in sort of works

--- a/app/themes/kuusipalaa/checking_in.html
+++ b/app/themes/kuusipalaa/checking_in.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <title>Search</title>
-      
+
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
       <link href="css/spinner.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
@@ -41,21 +41,21 @@
       <h1>
       <div class="person_info">
         <h2><span id="person_field"> has been checked in!</h2>
-      
+
         <img src="" id="image_field" />
       </div>
       <div class="stats">
-        <div>Your latest balance: <span id="latest_balance"></span>Ŧ</div>
-        <div>Experiments attended: <span id="events_count"></span></div>
-        <div>Last seen at:<span id="last_attended"></span></div>
+        <div>Your latest balance: <span id="latest_balance"></span></div>
+        <div>Events attended: <span id="events_count"></span></div>
+        <div>Last seen at: <span id="last_attended"></span></div>
       </div>
 
 
- 
+
 
       </section>
     <script src="js/checking_in.js"></script>
 
   </body>
-  
+
 </html>
