--- a/app/themes/kuusipalaa/link_new_card.html
+++ b/app/themes/kuusipalaa/link_new_card.html
@@ -3,10 +3,12 @@
   <head>
       <meta charset="UTF-8">
       <title>Search</title>
-      
+
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
+      <link href="css/jquery.ml-keyboard.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
       <script src="js/shared.js"></script>
+      <script src="js/jquery.ml-keyboard.js"></script>
   </head>
   <body>
     <header>
@@ -24,16 +26,16 @@
     <section class="flash" id="flash"></section>
     <section class="container">
       <h2>Link new card</h2>
-
+      <div id="error_message"></div>
       <form id="search_for_users"  url="" method="get">
-        Type a part of name: <input type="text" id="text_search" autofocus name="searchterm"><br />
+        Type a part of a username or email address: <input type="text" id="text_search" autofocus name="searchterm"><br />
         <br /><input type="submit" id="submit_search" value="Submit">
       </form>
 
-     
+
     </section>
-   
+
      <script src="js/link_card.js"></script>
   </body>
-  
+
 </html>
