--- a/app/themes/kuusipalaa/splash.html
+++ b/app/themes/kuusipalaa/splash.html
@@ -5,7 +5,7 @@
       <title>Kuusi Palaa screensaver</title>
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
-      <script src="js/screensaver.js"></script>
+
       <style>
         body {
           margin: 0 !important;
@@ -15,10 +15,7 @@
   <body>
     <a href="index.html">
       <div id="screensaver_div">
-        <div class="touchmessage">
-          Welcome to Kuusi Palaa.
-          Touch screen to start.
-        </div>
+        <img src="img/screensaver.gif">
       </div>
     </a>
 
