screensaver return fix

--- a/app/themes/kuusipalaa/checking_in.html
+++ b/app/themes/kuusipalaa/checking_in.html
@@ -50,7 +50,7 @@
         <div>Last seen at: <span id="last_attended"></span></div>
       </div>
 
-
+      <button id="main_menu2">Back to start</button>
 
 
       </section>
