--- a/app/themes/kuusipalaa/splash.html
+++ b/app/themes/kuusipalaa/splash.html
@@ -13,11 +13,11 @@
       </style>
   </head>
   <body>
-    <a href="index.html">
+    <a href="#" id="return">
       <div id="screensaver_div">
         <img src="img/screensaver.gif">
       </div>
     </a>
-
+    <script src="js/screensaver.js"></script>
   </body>
 </html>
