--- a/app/themes/kuusipalaa/checking_in.html
+++ b/app/themes/kuusipalaa/checking_in.html
@@ -49,9 +49,9 @@
         <div>Events attended: <span id="events_count"></span></div>
         <div>Last seen at: <span id="last_attended"></span></div>
       </div>
-
-      <button id="main_menu2">Back to start</button>
-
+      <div class="stats">
+        <button id="main_menu3">Back to start</button>
+      </div>
 
       </section>
     <script src="js/checking_in.js"></script>
