added theme to guest ticket

--- a/app/themes/kuusipalaa/guest_ticket.html
+++ b/app/themes/kuusipalaa/guest_ticket.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <title>Temporary Kiosk</title>
+      <title>Kuusi Palaa Kiosk</title>
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
    <script src="js/shared.js"></script>
   </head>
   <body>
     <header>
-      <div class="logo"><img src="img/temporary_logo.png"></div>
       <div class="header_text">
         <h1>KUUSI<br />PALAA</h1>
       </div>
@@ -26,9 +25,9 @@
       <h2>Guest ticket</h2>
 
       <h3>Choose experiment:</p>
-    
+
       <div class="guests" id="events">
-        
+
       </div>
     </section>
   <script src="js/guest_tickets.js"></script>
