major kiosk fixe

--- a/app/themes/kuusipalaa/card_read.html
+++ b/app/themes/kuusipalaa/card_read.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <title>Sound Machine</title>
+      <title>Search</title>
+
       <link href="css/index.css" rel="stylesheet" type="text/css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
-      <script src="js/shared.js"></script>
+    <script src="js/shared.js"></script>
   </head>
   <body>
     <header>
@@ -22,27 +23,12 @@
     </header>
     <section class="flash" id="flash"></section>
     <section class="container">
-      <div class="left_info">
-        <h2 id="person_field"></h2>
-        <p id="user_id"></p>
-        <img src="" id="image_field" />
-                <div id="stakeholder">
-          STAKEHOLDER
-        </div>
-        <p>Latest balance:
-                <span id="latest_balance"></span>
-              </p>
-        <p>Last checked in:
-          <span id="last_checked_in"></span>
-        </p>
-      </div>
-      <div class="right_info">
-        <h3>Press the button to check in:</h3>
-        <div id="events"></div>
-      </div>
+      <h1>Looking up card....</h1>
+      <h2></h2>
+      <p>Please wait while we search for this card....</p>
+
     </section>
 
-    <script src="js/user_functions.js"></script>
 
   </body>
 
