--- a/app/themes/kuusipalaa/checking_in.html
+++ b/app/themes/kuusipalaa/checking_in.html
@@ -43,6 +43,7 @@
         <h2><span id="person_field"> has been checked in!</h2>
 
         <img src="" id="image_field" />
+
       </div>
       <div class="stats">
         <div>Your latest balance: <span id="latest_balance"></span></div>
@@ -50,7 +51,7 @@
         <div>Last seen at: <span id="last_attended"></span></div>
       </div>
       <div class="stats">
-        <button id="main_menu3">Back to start</button>
+        <button id="main_menu3">Return to start</button>
       </div>
 
       </section>
