guest ticket screen fix

--- a/app/themes/kuusipalaa/guest_ticket.html
+++ b/app/themes/kuusipalaa/guest_ticket.html
@@ -24,7 +24,7 @@
     <section class="container">
       <h2>Guest ticket</h2>
 
-      <h3>Choose experiment:</p>
+      <h3>Which event are you attending? Choose 'Kuusi Palaa season 1' if you are here for general free use.</p>
 
       <div class="guests" id="events">
 
